2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Turn on prettyprinting
	for Closure CL.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-output.boot: Simplify 'outputDomainConstructor'.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/presea.in, src/hyper/htsearch: Replace
	'case' by 'use_case'.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/parsing.lisp, src/interp/patches.lisp,
	src/interp/preparse.lisp: Simplify preparse.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/setq.lisp: Use DEFPARAMETER for some
	variables.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp,
	src/lisp/fricas-package.lisp, src/lisp/num_gmp.lisp:
	Silence STYLE-WARNING messages when loading gmp.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet,
	src/interp/primitives.lisp: Add faster version of
	'log' and 'sqrt'.

2012-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/int-top.boot, src/interp/compiler.boot,
	src/interp/msg.boot, src/interp/i-syscmd.boot,
	src/interp/pathname.boot, src/interp/setq.lisp:
	Remove ')workfiles' command.

2012-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/pf2sex.boot:
	Change representation of floats.

2012-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Use 'printf' instead of 'echo'.

2012-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mkfunc.spad.pamphlet: Avoid loss of
	precision.

2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/parsing.lisp,
	src/interp/s-parser.boot: Simplify Spad parser.

2012-01-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/cparse.boot,
	src/interp/g-error.boot, src/boot/typars.boot,