@@ -1,5 +1,11 @@
 2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/g-util.boot, src/interp/macros.lisp,
+	src/interp/nlib.lisp, src/interp/util.lisp,
+	src/interp/vmlisp.lisp: Misc cleanups.
+
+2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/lisp/fricas-lisp.lisp: Turn on prettyprinting
 	for Closure CL.
 
